--- a/app/curriculum.html
+++ b/app/curriculum.html
@@ -10,10 +10,7 @@ current: index
     <h2 class="h3 text-secondary text-center mb-3 mt-9">本月課表</h2>
     <div class="container">
     <div class="row mt-5 flex-nowrap justify-content-lg-center overflow-auto">
-      <div class="col-xl-10 flex-shrink-0">
-        <div class="swiper-list listSwiper">
-            <div class="swiper-wrapper">
-              <div class="swiper-slide">
+      <div class="col-xl-9">
                 <div class="card card-img bg-primary border-0 p-6 card-course-list">
                   <h5 class="text-white">2021 07 月</h5>
                   <table class="table text-secondary bg-white">
@@ -118,9 +115,6 @@ current: index
                     </tbody>
                   </table>
                 </div>
-              </div>
-            </div>
-          </div>
       </div>
     </div>
 </section>
@@ -129,38 +123,54 @@ current: index
     <div class="container">
         <h2 class="h3 text-secondary text-center mb-3 mt-9">上課須知</h2>
         <div class="d-flex flex-column align-items-center my-5">
-            <div class="d-flex">
+              <div class="row">
+                <div class="col-1 col-md-1">
                 <h2 class="text-secondary me-3 mt-2">1.</h2>
-                <div class="card card-ml-off card-notice mb-4 border-primary">
-                    <div class="card-body">
-                      <p class="m-0 text-primary">空中瑜珈、香氛開放 2 天前電話預約上課。</p>
-                    </div>
+              </div>
+              <div class="col-6 col-md-6">
+                <div class="card card-notice mb-4 border-primary">
+                  <div class="card-body">
+                    <p class="m-0 text-primary">空中瑜珈、香氛開放 2 天前電話預約上課。</p>
+                  </div>
+              </div>
+              </div>
                 </div>
-            </div>
-              <div class="d-flex">
-                <h2 class="text-secondary me-3 mt-2">2.</h2>
-                <div class="card card-notice mb-4 bg-primary">
+                <div class="row">
+                  <div class="col-1 col-1 col-md-1 offset-lg-2">
+                  <h2 class="text-secondary me-3 mt-2">2.</h2>
+                </div>
+                <div class="col-6 col-6 col-md-6">
+                  <div class="card card-notice mb-4 bg-primary">
                     <div class="card-body">
                         <p class="m-0 text-white">如果有特殊體質、特殊狀況，請主動告知該堂教師。</p>
                     </div>
                   </div>
-              </div>
-              <div class="d-flex">
-                <h2 class="text-secondary me-3 mt-2">3.</h2>
-                <div class="card card-ml-off card-notice mb-4 border-primary">
-                    <div class="card-body">
-                        <p class="m-0 text-primary">取消預約或時間異動請於預約日前一天晚間 21:00 前告知。</p>
+                </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-1 col-md-1">
+                      <h2 class="text-secondary me-3 mt-2">3.</h2>
+                  </div>
+                  <div class="col-6 col-md-6">
+                    <div class="card card-notice mb-4 border-primary">
+                      <div class="card-body">
+                          <p class="m-0 text-primary">取消預約或時間異動請於預約日前一天晚間 21:00 前告知。</p>
+                      </div>
                     </div>
                   </div>
-              </div>
-              <div class="d-flex">
-                <h2 class="text-secondary me-3 mt-2">4.</h2>
-                <div class="card card-notice mb-4 bg-primary">
-                    <div class="card-body">
-                        <p class="m-0 text-white">運動過程中若感到任何不適，請馬上停止且與老師商量討論。</p>
                     </div>
-                  </div>
-              </div>
+                    <div class="row">
+                      <div class="col-1 col-md-1 offset-lg-2">
+                      <h2 class="text-secondary me-3 mt-2">4.</h2>
+                    </div>
+                    <div class="col-6 col-md-6">
+                      <div class="card card-notice mb-4 bg-primary">
+                        <div class="card-body">
+                            <p class="m-0 text-white">運動過程中若感到任何不適，請馬上停止且與老師商量討論。</p>
+                        </div>
+                      </div>
+                    </div>
+                      </div>
             </div>
     </div>
 </section>
