--- a/app/contact.html
+++ b/app/contact.html
@@ -10,7 +10,7 @@ current: index
   <div class="container">
     <h2 class="h3 text-secondary text-center mb-3 mt-9">聯絡我們</h2>
     <div class="row mb-6">
-      <div class="col-md-12 col-lg-7">
+      <div class="col-md-10 col-lg-7">
         <iframe
           class="card-img"
           src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3615.007812261585!2d121.56236741537876!3d25.033808944452243!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1szh-TW!2stw!4v1630222272412!5m2!1szh-TW!2stw"
@@ -35,68 +35,70 @@ current: index
           </li>
         </ul>
       </div>
-      <div class="col-md-12 col-lg-5">
+      <div class="col-md-10 col-lg-5">
         <div class="card bg-light border-0 p-6">
           <h5 class="text-secondary mb-3">意見回饋&問題詢問</h5>
-          <div class="mb-3">
-            <label
-              for="exampleFormControlInput1"
-              class="form-label text-secondary"
-              >姓名</label
-            >
-            <input
-              type="text"
-              class="form-control border-primary"
-              id="exampleFormControlInput1"
-              placeholder="請輸入您的姓名"
-            />
-          </div>
-          <div class="mb-3">
-            <label
-              for="exampleFormControlInput2"
-              class="form-label text-secondary"
-              >電子信箱</label
-            >
-            <input
-              type="email"
-              class="form-control border-primary"
-              id="exampleFormControlInput2"
-              placeholder="email@example.com"
-            />
-          </div>
-          <div class="mb-3">
-            <label
-              for="exampleFormControlInput3"
-              class="form-label text-secondary"
-              >手機號碼</label
-            >
-            <input
-              type="text"
-              class="form-control border-primary"
-              id="exampleFormControlInput3"
-              placeholder="0912-345-678"
-            />
-          </div>
-          <div class="mb-3">
-            <label
-              for="exampleFormControlTextarea1"
-              class="form-label text-secondary"
-              >意見回饋</label
-            >
-            <textarea
-              class="form-control"
-              id="exampleFormControlTextarea1"
-              rows="8"
-            ></textarea>
-          </div>
-          <div class="d-flex justify-content-end">
-            <button
-              type="button"
-              class="btn btn-secondary text-white rounded-2 send"
-            >
-              送出
-            </button>
-          </div>
+          <form action="">
+            <div class="mb-3">
+              <label
+                for="exampleFormControlInput1"
+                class="form-label text-secondary"
+                >姓名</label
+              >
+              <input
+                type="text"
+                class="form-control border-primary"
+                id="exampleFormControlInput1"
+                placeholder="請輸入您的姓名"
+              />
+            </div>
+            <div class="mb-3">
+              <label
+                for="exampleFormControlInput2"
+                class="form-label text-secondary"
+                >電子信箱</label
+              >
+              <input
+                type="email"
+                class="form-control border-primary"
+                id="exampleFormControlInput2"
+                placeholder="email@example.com"
+              />
+            </div>
+            <div class="mb-3">
+              <label
+                for="exampleFormControlInput3"
+                class="form-label text-secondary"
+                >手機號碼</label
+              >
+              <input
+                type="text"
+                class="form-control border-primary"
+                id="exampleFormControlInput3"
+                placeholder="0912-345-678"
+              />
+            </div>
+            <div class="mb-3">
+              <label
+                for="exampleFormControlTextarea1"
+                class="form-label text-secondary"
+                >意見回饋</label
+              >
+              <textarea
+                class="form-control"
+                id="exampleFormControlTextarea1"
+                rows="8"
+              ></textarea>
+            </div>
+            <div class="d-flex justify-content-end">
+              <button
+                type="button"
+                class="btn btn-secondary text-white rounded-2 send"
+              >
+                送出
+              </button>
+            </div>
+          </form>
         </div>
       </div>
     </div>
