--- a/app/curriculum.html
+++ b/app/curriculum.html
@@ -10,7 +10,7 @@ current: index
     <h2 class="h3 text-secondary text-center mb-3 mt-9">本月課表</h2>
     <div class="container">
     <div class="row mt-5 flex-nowrap justify-content-lg-center overflow-auto">
-      <div class="col-xl-9">
+      <div class="col-xl-9 table-responsive">
                 <div class="card card-img bg-primary border-0 p-6 card-course-list">
                   <h5 class="text-white">2021 07 月</h5>
                   <table class="table text-secondary bg-white">
