--- a/app/finish.html
+++ b/app/finish.html
@@ -9,27 +9,40 @@ current: index
   <div class="container">
     <!-- 立即預約 -->
     <div class="pt-9">
-      <h2 class="h3 text-secondary text-center mb-3">立即預約</h2>
-      <div class="btn-body d-flex justify-content-center">
-        <button
-          type="button"
-          class="btn btn-light text-secondary px-3 px-md-7 py-md-3"
-        >
-          選擇方案
-        </button>
-        <button
-          type="button"
-          class="btn btn-light text-secondary px-3 px-md-7 py-md-3 mx-2 mx-md-5"
-        >
-          填寫資料
-        </button>
-        <button
-          type="button"
-          class="btn btn-secondary text-white px-3 px-md-7 py-md-3"
-        >
-          完成預約
-        </button>
-      </div>
+      <h1 class="h3 text-secondary text-center mb-3">立即預約</h1>
+      <!-- 預約步驟建議使用 ol li 結構 -->
+      <ol class="btn-body d-flex justify-content-center list-unstyled">
+        <li>
+          <a
+            href="reserve-course.html"
+            class="btn btn-light text-secondary px-3 px-md-7 py-md-3"
+          >
+            選擇方案
+          </a>
+        </li>
+        <li>
+          <a
+            href="appointment-form.html"
+            class="
+              btn btn-light
+              text-secondary
+              px-3 px-md-7
+              py-md-3
+              mx-2 mx-md-5
+            "
+          >
+            填寫資料
+          </a>
+        </li>
+        <li>
+          <a
+            href="finish.html"
+            class="btn btn-secondary text-white px-3 px-md-7 py-md-3"
+          >
+            完成預約
+          </a>
+        </li>
+      </ol>
     </div>
     <!-- 內容 -->
     <div class="d-table mx-auto mt-5">
@@ -40,22 +53,26 @@ current: index
     <h5 class="text-secondary text-center fw-normal mt-3">
       已完成預約，以下是您的預約資訊:
     </h5>
-    <div class="card rounded-bottom card-finish-w d-table mx-auto mt-4">
-      <div
-        class="
-          card-header
-          rounded-top
-          text-white
-          bg-secondary
-          d-flex
-          justify-content-between
-          align-items-center
-        "
+    <div
+      class="accordion border rounded-3 col-md-6 mx-auto mt-4"
+      id="accordionExample"
+    >
+      <button
+        class="accordion-button btn btn-secondary text-white bg-secondary"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#collapseOne"
+        aria-expanded="true"
+        aria-controls="collapseOne"
       >
-        <p class="m-0 p-0 fw-normal">預約資訊</p>
-        <div><span class="material-icons-outlined"> expand_more </span></div>
-      </div>
-      <div class="card-body">
+        預約資訊
+      </button>
+      <div
+        class="card-body accordion-collapse collapse show"
+        id="collapseOne"
+        aria-labelledby="headingOne"
+        data-bs-parent="#accordionExample"
+      >
         <div class="d-flex align-items-center my-2">
           <h6 class="text-secondary fw-normal me-3">您選擇的是</h6>
           <h5 class="text-primary fw-normal">首次體驗課程-基礎</h5>
@@ -70,19 +87,19 @@ current: index
         </p>
       </div>
     </div>
-    <div class="text-secondary d-table mx-auto course-notice">
+    <div class="text-secondary col-md-4 mx-auto">
       <h5 class="mt-4">上課注意事項</h5>
       <p>
         第一次上課請提前 10-15 分鐘至櫃檯報到，請攜帶毛巾、水、
         穿著運動服、乾淨室內運動鞋。 如欲更改體驗時間請提前通知我們喔！
       </p>
       <div class="d-grid gap-2 mt-5 mb-10">
-        <button
-          type="button"
+        <a
+          href="index.html"
           class="btn btn-primary text-white rounded-2 py-2 fs-5"
         >
-          送出
-        </button>
+          返回首頁
+        </a>
       </div>
     </div>
   </div>
